--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(gltf_plus_binary_parser)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(gltf_plus_binary_parser main.cpp)
+add_executable(gltf_plus_binary_parser main.cpp
+        Face.h
+        Vertice.h)
