Add find 2D triangle intersection in 3D algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(gltf_plus_binary_parser main.cpp
         Face.h
-        Vertice.h)
+        Vertice.h
+        intersection/Triangle.h
+        intersection/Point3D.h
+        intersection/FindIntersectionPoint.cpp
+)
